# pycom-client-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: discover_devices.py  discover_simple_devices.py  known_device.py  known_device_simple.py  main.py
src/pycom/: __init__.py  nodes.py  utils.py
